@startuml Factory_Pattern
skinparam classAttributeIconSize 0

interface Ability {
    + getManaCost(): int
    + execute(caster, target, allies, enemies, state): void
}

class AbilityFactory {
    + resolve(heroClass: HeroClass, hybridClass: HybridClass, abilityIndex: int): Ability
    - resolveOrder(hybridClass: HybridClass, abilityIndex: int): Ability
    - resolveChaos(hybridClass: HybridClass, abilityIndex: int): Ability
}

class BerserkerAbility {
  + getManaCost(): int
  + execute(...): void
}

class ReplenishAbility {
  + getManaCost(): int
  + execute(...): void
}

class FireballAbility {
  + getManaCost(): int
  + execute(...): void
}

class ChainLightningAbility {
  + getManaCost(): int
  + execute(...): void
}

class HealAbility {
  + getManaCost(): int
  + execute(...): void
}

class ProtectAbility {
  + getManaCost(): int
  + execute(...): void
}

class FireShieldAbility {
  + getManaCost(): int
  + execute(...): void
}

Ability <|.. BerserkerAbility
Ability <|.. ReplenishAbility
Ability <|.. FireballAbility
Ability <|.. ChainLightningAbility
Ability <|.. HealAbility
Ability <|.. ProtectAbility
Ability <|.. FireShieldAbility
AbilityFactory ..> Ability : <<creates>>

@enduml